# traces

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
src/: index.ts  main.rs
src/config/: chains.ts
src/routes/: transactions.ts
src/services/: ethService.ts  ethereum.ts  polygon.ts
src/types/: scan.ts
src/utils/: scan.ts  validators.ts
tests/integration/: blockByTime.e2e.test.ts  ethereum.e2e.test.ts
tests/services/: ethereum.test.ts
tests/utils/: scan.test.ts  validators.test.ts
